# cohort

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml
.github/workflows/: ci.yml
adapters/codex/: parity-gaps.toml
canonical/agents/: aws-architect.md  azure-architect.md  chief-of-staff.md  code-reviewer.md  (+17 more)
docs/: DESIGN.md  life-connectors.md  model-tiers.md  quick-reference.html  scheduled-research.md
examples/: README.md
installer/: Makefile  bootstrap.ps1  bootstrap.sh
scripts/: release.py
tests/: conftest.py  test_adopt.py  test_authoring.py  test_bootstrap.py  test_cli_doer.py  test_compact_memory.py  test_compile_claude.py  test_consult_gpt_command.py  test_consult_grok_command.py  test_crew_command.py  test_dashboard.py  test_distill.py  test_docs_parity.py  test_engine_tier_review.py  test_engines.py  test_executor.py  test_fable_mode_memory.py  test_frontmatter_injection.py  test_gates.py  test_git_transport_ban.py  test_goal_command.py  test_golden_lock.py  test_hook_events.py  test_import_agents.py  test_improve_aggregation.py  test_install_cli.py  test_inventory.py  test_kind_schema.py  test_layers.py  test_life_cli.py  test_life_rhythm_commands.py  test_life_template.py  test_loader.py  test_merge_claude.py  test_mission_control.py  test_myoffice.py  test_office_directory.py  test_office_quarantine_cmd.py  test_operational_hard_limits.py  test_orchestrate_command.py  (+34 more)
(+244 files in other folders)
